Archive2/e7/8f921790fca032/output
main.cpp: In function 'int main()':
main.cpp:19:1: error: expected primary-expression before '}' token
 }
 ^
